--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,29 @@ i{
 .fa-solid:hover {
     color: rgb(107, 105, 105);
 }
+
+.search-container{
+    height: 56px;
+    /* display: flex;
+    flex-direction: column; */
+
+}
+
+.data-list{
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    overflow: hidden;
+    overflow-y: scroll;
+    margin-top: 5px;
+    border-bottom: 1px black solid;
+}
+
+.data-list > a{
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    padding: 0.5em;
+    border: 1px solid gray;
+    border-top: none;
+}
