--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-i{
-    margin: 5px;
-    font-size: 1.2em;
+i {
+  margin: 5px;
+  font-size: 1.2em;
 }
 
-.card{
-    background-color: rgb(248, 248, 148);
+.card {
+  background-color: rgb(248, 248, 148);
 }
 
 .fa-solid:hover {
-    color: rgb(107, 105, 105);
+  color: rgb(107, 105, 105);
 }
 
-.search-container{
-    height: 56px;
-    /* display: flex;
+.search-container {
+  height: 40px;
+  /* display: flex;
     flex-direction: column; */
-
 }
 
-.data-list{
-    display: flex;
-    flex-direction: column;
-    height: 200px;
-    overflow: hidden;
-    overflow-y: scroll;
-    margin-top: 5px;
-    border-bottom: 1px black solid;
+.data-list {
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+  overflow: hidden;
+  overflow-y: scroll;
+  margin-top: 5px;
+  border-bottom: 1px black solid;
+  z-index: 1000;
+  position: relative;
 }
 
-.data-list > a{
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    padding: 0.5em;
-    border: 1px solid gray;
-    border-top: none;
+.data-list > a {
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  padding: 0.5em;
+  border: 1px solid gray;
+  border-top: none;
+}
+
+.data-list > a:hover {
+  background-color: rgb(236, 235, 235);
 }
